# MeaCode-Estudio

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  API.md  ARCHITECTURE.md  CHANGELOG.md  COMMIT_GUIDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  ESTADO_ACTUAL_EDITOR.txt  FINAL_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPTIMIZACIONES.md  PRE_COMMIT_CHECKLIST.md  QUICK_COMMIT.md  README.md  RESUMEN_FINAL.md  ROADMAP.md  Roadmap.md  SUPABASE_MIGRATION.md  Sodemap.md  TODO_COMPLETION_STATUS.md  index.html  meacode-estudio---plan-completo-a5ffcaca.plan.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.cursor/plans/: github_actions_ci_cd_setup_095d8824.plan.md
.github/docs/: signing-guide.md
.github/workflows/: auto-link-on-issue.yml  autocreate-issues.yml  build.yml  ci.yml  linux-release.yml  nightly.yml  release.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: CODE_SIGNING.md  DEVELOPMENT.md  GIT_CLEANUP.md  QUICK_START.md  SUPABASE_SETUP.md  USER_GUIDE.md
e2e/: auth.spec.ts  canvas.spec.ts  editor.spec.ts  git.spec.ts  settings.spec.ts
electron/: main.cjs  preload.cjs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/: Editor.tsx
kernel/gpu-manager/: Cargo.toml
kernel/gpu-manager/src/: lib.rs
kernel/kernel-ai/: Cargo.toml
kernel/kernel-ai/src/: lib.rs
kernel/kernel-core/: Cargo.toml
kernel/kernel-core/src/: indexer.rs  lib.rs  license.rs  main.rs  server.rs
kernel/kernel-lsp/: Cargo.toml
kernel/kernel-lsp/src/: handlers.rs  lib.rs  main.rs
kernel/plugin-host/: Cargo.toml
kernel/plugin-host/src/: lib.rs
meacode-core/: package.json
scripts/: clean-rust-build.ps1  clean-rust-build.sh  update-pubkey.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/linux/: com.meacore.meacode-studio.metainfo.xml
src-tauri/src/: git.rs  gpu.rs  main.rs
src-tauri/target2/: .rustc_info.json
src/Desarrollo/: README.md
src/Desarrollo/ai/: dev.ts
src/ai/flows/: ai-chat-assistant.ts  ai-powered-intellisense.ts
src/api/: bridge.ts
src/app/: globals.css  layout.tsx
src/components/: ContextMenu.tsx  ErrorBoundary.tsx  ProblemsPanel.tsx  TabBar.tsx  command-palette.tsx  ide-layout.tsx
src/components/auth/: login-dialog.tsx  signup-dialog.tsx
src/components/code-canvas/: block-library.tsx  canvas-editor.tsx  code-block.tsx
src/components/panels/: ai-chat-panel.tsx  code-canvas-panel.tsx  console-panel.tsx  editor-panel.tsx  file-explorer-panel.tsx  gpu-settings-panel.tsx  mea-code-panel.tsx  preview-panel-enhanced.tsx  preview-panel.tsx  search-panel.tsx  settings-panel.tsx  source-control-panel.tsx  subscription-panel.tsx
src/components/ui/: sidebar.tsx
src/contexts/: auth-context.tsx  editor-context.tsx  subscription-context.tsx
src/editor/: MainEditor.tsx
src/features/ai/: AIChat.tsx  AIChatThemed.tsx
src/features/editor/: Editor.tsx  MainEditor.tsx  WelcomeScreen.tsx
src/features/explorer/: ExplorerPanel.tsx
src/features/settings/: SettingsPanel.tsx
src/features/terminal/: RunDebugPanel.tsx  Terminal.tsx
src/hooks/: useEditor.ts  useFeatureFlags.ts  useSettings.ts
src/ipc/: bridge.ts
src/layout/: IdeLayout.tsx  Layout.tsx  NewLayout.tsx
src/layout/components/: ActivityBar.tsx  TopBar.tsx
src/lib/: auto-updater.ts  fs-tauri.ts  gpu-detector.ts  intellisense-cache.ts  performance-optimizations.ts  stripe.ts
src/lib/supabase/: client.ts  server.ts
src/panels/: AIChatThemed.tsx  ExplorerPanel.tsx  Terminal.tsx  TerminalThemed.tsx
src/settings/: SettingsPanel.tsx
src/shared/components/: CommandPalette.tsx  ErrorBoundary.tsx  ProblemsPanel.tsx  QuickOpen.tsx
src/shared/hooks/: useEditor.ts
src/shared/utils/: telemetry.ts  (+3 more)
src/test/: auth-context.test.tsx  gpu-detector.test.ts  setup.ts  utils.test.ts
src/types/: global.d.ts
src/utils/: aiSettings.ts  fileUtils.ts
website/: CHANGELOG.md  index.html  style.css
(+4 files in other folders)
