[workspace]
members = [
  "src-tauri",
  "kernel/kernel-core",
  "kernel/kernel-lsp",
  "kernel/kernel-ai",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.dev]
opt-level = 1  # Optimización ligera para desarrollo más rápido
incremental = true
debug = true

[profile.dev.package."*"]
opt-level = 3  # Optimización completa para dependencias

[profile.release]
opt-level = 3
lto = true  # Link-time optimization
codegen-units = 1  # Mejor optimización
panic = 'abort'  # Binarios más pequeños
