[package]
name = "meacode-studio"
version = "0.1.0"
description = "MeaCode Studio - GPU-first AI IDE"
authors = ["Tomas"]
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["shell-all", "path-all", "dialog-all"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
