[package]
name = "meacode-studio"
version = "0.1.0"
description = "MeaCode Studio - AI-first desktop IDE"
authors = ["Tomas"]
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["updater"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
kernel-core = { path = "../kernel/kernel-core" }
kernel-lsp = { path = "../kernel/kernel-lsp" }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
