[package]
name = "meacode-studio"
version = "1.0.0"
description = "MeaCode Studio - AI-first desktop IDE"
authors = ["Tomas"]
edition = "2021"
rust-version = "1.70"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "1", features = ["dialog"] }
tokio = { workspace = true, features = ["process"] }
kernel-core = { path = "../kernel/kernel-core" }
kernel-lsp = { path = "../kernel/kernel-lsp" }

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
