[package]
name = "kernel-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "sync"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
